Avaliações com comentarios, seção mostrando amigos e seus itens curtidos

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1945,6 +1945,44 @@ for some reason nth-child(1) is always busy and elements starting from 2 */
     width: 100%;
 }
 
+.comentarHome{
+    background: #3D94F6;
+    background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -ms-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -o-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -webkit-gradient(to bottom, #3D94F6, #1E62D0);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    color: #FFFFFF;
+    font-family: Verdana;
+    font-size: 14px;
+    font-weight: 700;
+    padding: 6px;
+    border: solid #337FED 1px;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
+
+}
+.comentarHome:hover {
+    border: solid #337FED 1px;
+    background: #1E62D0;
+    background-image: -webkit-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -moz-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -ms-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -o-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -webkit-gradient(to bottom, #1E62D0, #3D94F6);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-decoration: none;
+ }
+
 .we-comet {
     float: left;
     width: 100%;
@@ -4557,14 +4595,13 @@ a.forgot-pwd {
 }
 
 .liked-pages2 {
-    float: left;
+    
     list-style: outside none none;
     margin-top: 10px;
     padding-left: 0;
     width: 100%;
-    text-align: left;
-    display: flex;
-    flex-direction: column-reverse;
+    
+    
     
 }
 
@@ -4581,7 +4618,7 @@ a.forgot-pwd {
     margin-top: 20px;
     overflow: hidden;
     display: flex;
-    flex-direction: column-reverse;
+    
 
 }
 
