--- a/views/includes/friends-widget.ejs
+++ b/views/includes/friends-widget.ejs
@@ -1,5 +1,5 @@
 <div class="box-friend">
-    <h4 class="widget-title2" >Friends</h4>
+    <h4 class="widget-title2" >Amigos </h4>
         
             
            
@@ -22,6 +22,7 @@
     var isFriendsWidget = true;
     function showFriendsWidget() {
         var html = "";
+        
         for (var a = 0; a < window.user.friends.length; a++) {
            
             var data = window.user.friends[a];
