--- a/views/notifications.ejs
+++ b/views/notifications.ejs
@@ -15,7 +15,7 @@
 
 								<div class="central-meta">
 									<div class="editing-interest">
-										<h5 class="f-title"><i class="ti-bell"></i>All Notifications </h5>
+										<h5 class="f-title"><i class="ti-bell"></i>Notificações </h5>
 										<div class="notification-box">
 											<ul id="all-notifications"></ul>
 										</div>
