--- a/views/pagesLiked.ejs
+++ b/views/pagesLiked.ejs
@@ -14,7 +14,7 @@
 						<div class="col-md-6">							
 							<div class="row justify-content-md-center">
 								<div class="groups">
-									<span><i class="fa fa-file-text-o"></i> Livros </span>
+									<span><i class="fa fa-file-text-o"></i> Seus livros curtidos </span>
 								</div>
 								<ul class="liked-pages" id="all-pages"></ul>
 							</div>							
@@ -26,29 +26,22 @@
 		</div>
 	</div>
 </section>
-
-<script>
-	
-	 var isPages = true;
-	 function getPages(){
-		var ajax = new XMLHttpRequest();
-		ajax.open("POST", "/getPages", true);
-			
-		ajax.onreadystatechange = function(){
-			if(this.readyState == 4 && this.status == 200){
-				var response = JSON.parse(this.responseText);
-				
-				if(response.status == "error"){
-					alert(response.message);
-					return;
-				}
-				
-				
-				var html = "";
-				for (var a = 0; a < response.data.length; a++){
-					var data = response.data[a];
-					
-					html += '<li>';
+	<script>
+		var pagesLiked = true;
+		function likedPages() {
+			var ajax = new XMLHttpRequest();
+			ajax.open("POST", "/likedPages", true);
+			ajax.onreadystatechange = function () {
+				if (this.readyState == 4 && this.status == 200) {
+					var response = JSON.parse(this.responseText);
+					if (response.status == "error") {
+						alert(response.message);
+						return;
+					}
+					var html = "";
+					for (var a = 0; a < response.data.length; a++) {
+						var data = response.data[a];
+						html += '<li>';
 					html += '<div class="f-page">';
 					html += '<figure>';
 					html += '<a href="/page/' + data._id + '">';
@@ -78,15 +71,14 @@
 					html += '</div>';
 					html += '</div>';
 					html += '</li>';
+					}
+					document.getElementById("all-pages").innerHTML = html;
 				}
-				document.getElementById("all-pages").innerHTML = html;
 			}
-		};
-		
-	var formData = new FormData();
-	formData.append("accessToken", localStorage.getItem("accessToken"));
-	ajax.send(formData);		
-	}	 
-</script>
+			var formData = new FormData();
+			formData.append("accessToken", localStorage.getItem("accessToken"));
+			ajax.send(formData);
+		}
+	</script>
 
 <%- include ("includes/foooter") %>
