--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -25,7 +25,7 @@
 			<ul>
 				<li class="admin-name">
 					<h5 class="user-name" id="user-name" style="padding-top: 20px; padding-bottom: 20px;"></h5>
-					<h6 class="caption" id="caption"></h5>
+					
 				</li>
 
 			</ul>
@@ -77,7 +77,8 @@
 					document.getElementById("cover-photo").setAttribute("src", mainURL + '/' + response.data.coverPhoto);
 					document.getElementById("profile-image").setAttribute("src", mainURL + '/' + response.data.profileImage);
 					
-					document.getElementById("user-name").innerHTML = response.data.username;
+					document.getElementById("user-name").innerHTML = response.data.name;
+					document.querySelector(".username").innerHTML = window.user.username;
 					document.getElementById("estado").innerHTML = response.data.estado;
 					document.getElementById("cidade").innerHTML = response.data.cidade;
 					document.getElementById("date").innerHTML = response.data.date;
